chore: bump expo example

--- a/example-expo/android/app/src/main/res/xml/locales_config.xml
+++ b/example-expo/android/app/src/main/res/xml/locales_config.xml
@@ -1,7 +1,5 @@
-
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <locale-config>
-        <locale android:name="en" />
-        <locale android:name="pl" />
-    </locale-config>
-</resources>
+<?xml version="1.0" encoding="utf-8"?>
+<locale-config xmlns:android="http://schemas.android.com/apk/res/android">
+  <locale android:name="en" />
+  <locale android:name="pl" />
+</locale-config>
